@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 public class PendingReplicationActions implements Consumer<ReplicationGroup>, Releasable {
 
@@ -99,10 +98,7 @@ public class PendingReplicationActions implements Consumer<ReplicationGroup>, Re
 
     @Override
     public synchronized void close() {
-        final List<RetryableAction<?>> toCancel = onGoingReplicationActions.values()
-            .stream()
-            .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+        final List<RetryableAction<?>> toCancel = onGoingReplicationActions.values().stream().flatMap(Collection::stream).toList();
         onGoingReplicationActions.clear();
         cancelActions(toCancel, "Primary closed.");
     }
